# ocr

./: .gitignore  README.md  image_data_processor.py  preprocessor.py  pyproject.toml  rec.py
nexus_test/: .gitignore  image_data_processor.py  preprocessor.py  rec.py
tests/: test_nexus_test.py
